force-app/main/default/objects/Season__c/fields/Season_number__c.field-meta.xml
<CustomField>
    <fullName>Season_number__c</fullName>
    <label>Season number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>