force-app/main/default/objects/Season__c/fields/Series_Name__c.field-meta.xml
<CustomField>
    <fullName>Series_Name__c</fullName>
    <formula>TV_Series__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Series Name</label>
    <type>Text</type>
</CustomField>