force-app/main/default/objects/Season__c/fields/TV_Series__c.field-meta.xml
<CustomField>
    <fullName>TV_Series__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TV Series</label>
    <referenceTo>TV_Series__c</referenceTo>
    <relationshipLabel>Seasons</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>