force-app/main/default/objects/Season__c/validationRules/Only_positive_integers.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_positive_integers</fullName>
    <active>true</active>
    <errorConditionFormula>Season_number__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Season_number__c</errorDisplayField>
    <errorMessage>Season number must be positive number.</errorMessage>
</ValidationRule>