force-app/main/default/objects/Season__c/listViews/All_Seasons.listView-meta.xml
<ListView>
    <fullName>All_Seasons</fullName>
    <columns>Full_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Seasons</label>
</ListView>