force-app/main/default/objects/Season__c/listViews/Single_Series_seasons_Edit_filter.listView-meta.xml
<ListView>
    <fullName>Single_Series_seasons_Edit_filter</fullName>
    <columns>Full_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Series_Name__c</field>
        <operation>equals</operation>
        <value>Game of Thrones</value>
    </filters>
    <label>Single Series seasons (Edit filter)</label>
</ListView>